--- a/src/components/Homepage/styles.css
+++ b/src/components/Homepage/styles.css
@@ -1,5 +1,16 @@
 .center-vert {
     display:flex;
     margin: auto;
-    align-items: center
+    align-items: center;
+}
+
+.info-env {
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 10px;
+    color: rgba(0,0,0,0.7)
+}
+
+.enphasis {
+    font-weight: 100;
+    font-size: calc(1.2rem + 1vw)
 }
